test/conformance/chainsaw/cel-pol/mpol/namespaced/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-nmpol
