test/conformance/chainsaw/cel-pol/mpol/namespaced/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-nmpol
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
