test/conformance/chainsaw/cel-pol/mpol/namespaced/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: NamespacedMutatingPolicy
metadata:
  name: add-label-to-pods
  namespace: test-nmpol
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE"]
      resources: ["pods"]
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: |
        Object{
          metadata: Object.metadata{
            labels: {
              "mutated-by-nmpol": "true",
              "policy-namespace": "test-nmpol"
            }
          }
        }
