test/conformance/chainsaw/cel-pol/mpol/namespaced/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-nmpol
  labels:
    mutated-by-nmpol: "true"
    policy-namespace: "test-nmpol"
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
